# pycam

./: .env  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
editor/: effects.py  form.py  models.py  urls.py  views.py
editor/migrations/: 0001_initial.py  0002_alter_image_image_alter_image_user_imageedit.py
editor/static/css/: 404.css  base.css  feature.css  footer.css  header.css  login.css
editor/static/images/: pycam.avif
editor/static/template/: 404.html  500.html  base.html  feature.html  homepage.html  login.html  snippet_footer.html  snippet_header.html
pycam/: settings.py  urls.py
pycam/static/template/: 404.html  base.html  login.html
